updated FOX version to the last one

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,9 @@ version: '2'
 
 services:
   fox:
-    image: bde2020/fox:latest
-    environment:
-      - XMX=8G
-      - LNG=en
+    build: .
     ports:
       - "4444:4444"
+    volumes:
+      - "./.m2:/root/.m2"
 
